# carf

./: .gitignore  AGENTS.md  CLAUDE.ko.md  CLAUDE.md  README.ko.md  README.md  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
docs/: API.md  API_SPECIFICATION.md  ARCHITECTURE.ko.md  ARCHITECTURE.md  DEVELOPMENT.ko.md  DEVELOPMENT.md  FRIDA_JS_API_ROADMAP.md  PRD.md
docs/frida/: 00-overview.md  01-process-module-thread.md  02-memory.md  03-interceptor.md  04-stalker.md  05-java-objc.md  06-best-practices.md  07-cmodule-rustmodule-io.md
scripts/: bridge-dev.ts  java-hook-harness.ts
src/: App.tsx  app.tsx  index.css  index.tsx
src-agent/: package.json  tsconfig.json
src-agent/src/: bridges.ts  index.ts
src-frida/methods/: enumerateExports.ts  enumerateModules.ts  enumerateThreads.ts  getBacktrace.ts  index.ts  readMemory.ts  searchMemory.ts  writeMemory.ts
src-frida/rpc/: reply.ts  router.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  error.rs  frida_service.rs  input_service.rs  lib.rs  main.rs  web_bridge.rs
src-tauri/src/commands/: adb.rs  agent.rs  ai.rs  device.rs  library.rs  mod.rs  process.rs  session.rs
src-tauri/src/services/: adb.rs  ai.rs  frida.rs  mod.rs  script_loader.rs  session_manager.rs
src-tauri/src/services/frida/: mod.rs  owned.rs  runtime.rs  script.rs  types.rs  util.rs
src-tauri/src/state/: mod.rs
src/components/: ActionPopover.tsx  CommandPalette.tsx  CopyButton.tsx  ErrorBoundary.tsx  InlineActions.tsx  SplitPane.tsx  VirtualList.tsx  index.ts
src/contexts/: ThemeContext.tsx
src/hooks/: index.ts  useAgentRpc.ts  useFridaBackend.ts  useFridaEvents.ts  useKeyboardShortcuts.ts
src/lib/: event-normalizers.test.ts  event-normalizers.ts  file-picker.ts  format.ts  mock-tauri.test.ts  mock-tauri.ts  navigation.ts  report-export.ts  rpc.test.ts  rpc.ts  scheduling.ts  tauri.ts  (+3 more)
(+177 files in other folders)
