[package]
name = "carf"
version = "2.0.0-alpha"
description = "CARF - Cross-platform Application Runtime Framework"
authors = ["CARF Contributors"]
edition = "2021"
rust-version = "1.77.2"
default-run = "carf"

[lib]
name = "carf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-stream = "0.3"
axum = "0.8"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
futures-core = "0.3"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync"] }
tower-http = { version = "0.6", features = ["cors"] }
frida = { path = "vendor/frida", features = ["auto-download"] }
frida-sys = { version = "0.17.1", features = ["auto-download"] }
libc = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.dev]
incremental = true
